@@ -1,3 +1,6 @@
+= 20211203 =
+ * Update: FSE theme folders to the new proposed structure
+
 = 20210921 =
 * Fix: `tc_filename()` to always return theme-relative paths when possible.
 * Fix: Correct the block theme adaptation check to work in WordPress.org Theme Uploader
